# stack-exchange-data-etl

./: .gitignore  .pylintrc  Makefile  README.md  mypy.ini  pyproject.toml
src/: data_preparation.py  maria_to_postgres.py  warehouse_creation.py
src/schema/: __init__.py  orig_schema.py  stats_schema.py
src/schemas/: __init__.py  stats_pyspark_schema.py  stats_schema.py  warehouse_schema.py
src/transformations/: stats_transformation.py
src/utils/: datetime_utils.py  logger.py  pyspark_utils.py  sqlalchemy_connector.py
